# qwen3-tts-dataset-generator

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml
inputs/: italian_sentences.txt  sentences.txt  test_sentences.txt
src/: __init__.py  build_manifest.py  common.py  generate.py  normalize_audio.py  pipeline.py  pronunciation.py  report.py  review_rejected.py  test_speaker.py  validate.py
